Order drag items
Added logic to create and update orders of type out.

--- a/src/components/login/login.template.html
+++ b/src/components/login/login.template.html
@@ -1,7 +1,8 @@
 <div class="login">
     <div class="flex-container row padded-aside">
-        <div class="col-sm">&nbsp;</div>
-        <div class="flex-container col">
+        <div class="col-lg">&nbsp;</div>
+        <div class="flex-container col" style="padding-top:75px">
+            <div class="center"><h1>Jive Inventory</h1></div>
             <div class="col-sm padded-top">
                 <form class="example" action="javascript:void(0);">
                     <input [(ngModel)]="authStateModel.username" type="text" placeholder="Username" name="username">
@@ -21,6 +22,6 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm">&nbsp;</div>
+        <div class="col-lg">&nbsp;</div>
     </div>
 </div>
