--- a/src/components/orders/orders.template.html
+++ b/src/components/orders/orders.template.html
@@ -77,9 +77,9 @@
         <div class="Rtable Rtable--5cols Rtable--collapse">
             <div class="Rtable-row Rtable-row--head headers-fixed">
                 <div class="Rtable-cell small-cell column-heading">Checkbox</div>
-                <div class="Rtable-cell small-cell column-heading">Order No.</div>
+                <div class="Rtable-cell topic-cell column-heading">Order No.</div>
                 <div class="Rtable-cell small-cell column-heading">Ticket No.</div>
-                <div class="Rtable-cell date-cell column-heading">Type</div>
+                <div class="Rtable-cell small-cell column-heading">Order Direction</div>
                 <div class="Rtable-cell date-cell column-heading">Order Type</div>
                 <div class="Rtable-cell date-cell column-heading">Date</div>
                 <div class="Rtable-cell date-cell column-heading">Status</div>
@@ -97,7 +97,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="Rtable-cell small-cell">
+                <div class="Rtable-cell topic-cell">
                     <div class="Rtable-cell--heading">Order No.</div>
                     <div class="Rtable-cell--content date-content">
                         <span class="row-title">{{order.orderNumber}}</span>
@@ -108,9 +108,9 @@
                     <div class="Rtable-cell--heading">Ticket No.</div>
                     <div class="Rtable-cell--content title-content">{{order.ticketNumber}}</div>
                 </div>
-                <div class="Rtable-cell date-cell">
-                    <div class="Rtable-cell--heading">Type</div>
-                    <div class="Rtable-cell--content title-content">In</div>
+                <div class="Rtable-cell small-cell">
+                    <div class="Rtable-cell--heading">Order Direction</div>
+                    <div class="Rtable-cell--content title-content">{{order.orderType.orderDirection}}</div>
                 </div>
                 <div class="Rtable-cell date-cell">
                     <div class="Rtable-cell--heading">Order Type</div>
