--- a/src/components/orders/new-order.component.scss
+++ b/src/components/orders/new-order.component.scss
@@ -41,7 +41,7 @@
 /* Drag and Drop */
 
 .example-container {
-    width: 400px;
+    width: 640px;
     max-width: 100%;
     margin: 0 25px 25px 0;
     display: inline-block;
@@ -51,15 +51,15 @@
   .example-list {
     border: solid 1px #ccc;
     min-height: 60px;
+    max-height: 400px;
     background: white;
     border-radius: 4px;
-    overflow: hidden;
+    overflow: auto;
     display: block;
   }
   
   .example-box {
     padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
     color: rgba(0, 0, 0, 0.87);
     display: flex;
     flex-direction: row;
@@ -140,29 +140,5 @@
     pointer-events:none;
 
 }
-
-textarea{
-    padding: 10px;
-    font-size: 17px;
-    border: 0px solid #ddd;
-    float: left;
-    background: white;
-    font-family: 'Titillium Web';
-}
-
-.filter-fixed{
-    background-color: #eeeeee;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 3.5rem;
-    z-index: 3;
-  }
-
-.headers-fixed{
-    position: -webkit-sticky;
-    position: sticky;
-    top: 7.3rem;
-    z-index: 3;
-  }
 
 
