Refactor of all order pipeline
modulirize in components everything.

--- a/src/components/orders/new-order.template.html
+++ b/src/components/orders/new-order.template.html
@@ -43,6 +43,5 @@
     </div>
     <!--end of modal-->
 
-
-    <app-order-header></app-order-header>
-    
+    <!-- ORDER MASTER -->
+    <app-order-header [(dto)]="dto"></app-order-header>
