--- a/src/components/orders/order-filters.template.html
+++ b/src/components/orders/order-filters.template.html
@@ -1,7 +1,7 @@
 <div class="flex-grid padded-aside filter-fixed">
     <div class="col-sm">
         <form class="example" action="javascript:void(0);">
-            <input [(ngModel)]="scannedPartNo" (keyup.enter)='scanPartNo($event)' class="search" (focusout)='scanPartNo($event)'
+            <input [(ngModel)]="selectedProductKey" (keyup.enter)='scanPartNo($event)' class="search" (focusout)='scanPartNo($event)'
                 type="text" placeholder="EAN or Part Number" name="Search">
             <button type="submit"><i class="material-icons small">search</i></button>
         </form>
