fix update on inventory item

--- a/src/components/orders/order-filters.template.html
+++ b/src/components/orders/order-filters.template.html
@@ -78,7 +78,7 @@
 
 <!--ORDERS ALL LIST -->
       
-<div class="flex-grid padded-aside">
+<div>
     <app-order-in-list 
         [(dto)]="dto"
         [(orderDetail)]="orderDetail"
