--- a/src/components/orders/order-in-list.template.html
+++ b/src/components/orders/order-in-list.template.html
@@ -1,4 +1,4 @@
-<div *ngIf="dto.order.orderType.orderDirection === 'In'">
+<div >
     <div class="new-order tabs-container padded-aside">
         <div class="flex-container row">
             <div class="col-xs" *ngFor="let item of dto.products">
