--- a/src/components/orders/order-out-list.template.html
+++ b/src/components/orders/order-out-list.template.html
@@ -1,4 +1,4 @@
-<div *ngIf="dto.order.orderType.orderDirection === 'Out'">
+<div >
     <div class="example-container">
         <h2>All Products</h2>
         <div cdkDropList #todoList="cdkDropList" [cdkDropListData]="itemsList" [cdkDropListConnectedTo]="[doneList]"
