--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -160,3 +160,32 @@
         opacity: 0;
     }
 }
+
+/* Notification styles */
+
+.alert {
+    padding:8px 35px 8px 14px;
+    margin-bottom:1px;
+    text-shadow:0 1px 0 rgba(255,255,255,0.5);
+    text-align: center;
+    &.success {
+        color:#468847;
+        background-color:#dff0d8;
+        border-color:#d6e9c6
+    }
+    &.info {
+        color:#ffffff;
+        background-color:#4fa9d3;
+        border-color:#87a1ae
+    }
+    &.warning {
+        color:#b94a48;
+        background-color:#f2dede;
+        border-color:#eed3d7;
+    }
+    &.error {
+        color:#b94a48;
+        background-color:#f2dede;
+        border-color:#eed3d7;
+    }
+}
