--- a/src/components/orders/order-header.template.html
+++ b/src/components/orders/order-header.template.html
@@ -110,4 +110,7 @@
 </div>
 
 <!-- FILTER CONTROLS -->
-<app-order-filters [(dto)]="dto" [(orderDetail)]="orderDetail"></app-order-filters>
+<app-order-filters 
+    [(dto)]="dto" 
+    [(orderDetail)]="orderDetail">
+</app-order-filters>
