--- a/src/components/orders/orders.template.html
+++ b/src/components/orders/orders.template.html
@@ -1,6 +1,6 @@
 <!-- ORDER CONTROLS -->
 <div class="flex-grid padded-aside filter-fixed">
-    <div class="col-md">
+    <div class="col">
         <div class="flex-grid">
             <div class="col-sm">
                 <div class="btn-container">
