--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -169,23 +169,23 @@
     text-shadow:0 1px 0 rgba(255,255,255,0.5);
     text-align: center;
     &.success {
-        color:#468847;
-        background-color:#dff0d8;
-        border-color:#d6e9c6
+        color:#ddd;
+        background-color:#28a745;
+        border-color:#135221
     }
     &.info {
-        color:#ffffff;
-        background-color:#4fa9d3;
-        border-color:#87a1ae
+        color:#ddd;
+        background-color:#17a2b8;
+        border-color:#0d5762
     }
     &.warning {
-        color:#b94a48;
-        background-color:#f2dede;
-        border-color:#eed3d7;
+        color:#424242;
+        background-color:#ffc107;
+        border-color:#ffa807;
     }
     &.error {
-        color:#b94a48;
-        background-color:#f2dede;
-        border-color:#eed3d7;
+        color:#ddd;
+        background-color:#dc3545;
+        border-color:rgb(116, 29, 42);
     }
 }
