--- a/src/components/orders/order-header.template.html
+++ b/src/components/orders/order-header.template.html
@@ -6,7 +6,7 @@
     </div>
 </div>
 
-<div class="flex-container row padded-aside" [ngClass]="{'disabled': dto.order.orderState === 'Closed'}">
+<div class="flex-container row padded-aside" [ngClass]="{'disabled': isEdit}">
     <ng-container *ngFor="let orderType of orderTypes; let i = index">
         <div class="col-xxs">
             <label class="container">{{orderType.orderDirection}}
