--- a/src/components/orders/order-in-list.template.html
+++ b/src/components/orders/order-in-list.template.html
@@ -58,7 +58,7 @@
                             <div class="Rtable-cell--content">
                                 <a href="javascript:void(0);" (click)="removeitem(item.partNumber, item.serialNumber)"
                                     class="btn-container">
-                                    <span><i class="material-icons small">delete_forever</i></span>
+                                    <span><i class="material-icons delete small">delete_forever</i></span>
                                 </a>
                             </div>
                         </div>
