--- a/src/components/orders/orders.template.html
+++ b/src/components/orders/orders.template.html
@@ -76,6 +76,7 @@
         <div class="Rtable Rtable--5cols Rtable--collapse">
             <div class="Rtable-row Rtable-row--head headers-fixed">
                 <div class="Rtable-cell small-cell column-heading">Checkbox</div>
+                <div class="Rtable-cell tiny-cell column-heading">Id</div>
                 <div class="Rtable-cell topic-cell column-heading">Order No.</div>
                 <div class="Rtable-cell small-cell column-heading">Ticket No.</div>
                 <div class="Rtable-cell small-cell column-heading">Order Direction</div>
@@ -95,6 +96,10 @@
                             </label>
                         </span>
                     </div>
+                </div>
+                <div class="Rtable-cell tiny-cell">
+                    <div class="Rtable-cell--heading">Id</div>
+                    <div class="Rtable-cell--content title-content">{{order.id}}</div>
                 </div>
                 <div class="Rtable-cell topic-cell">
                     <div class="Rtable-cell--heading">Order No.</div>
