--- a/src/styles.scss
+++ b/src/styles.scss
@@ -266,6 +266,7 @@ textarea{
 .date-cell  { width: 20%; }
 .topic-cell  { width: 41%; }
 .small-cell  { width: 13%; }
+.tiny-cell  { width: 5%; }
 
 /* Apply styles
 ================================== */
