--- a/src/components/orders/order-filters.template.html
+++ b/src/components/orders/order-filters.template.html
@@ -7,11 +7,18 @@
             <button type="submit"><i class="material-icons small">search</i></button>
         </form>
     </div>
-    <div class="col-sm">
+    <div class="col-sm" *ngIf="dto.order.orderType.orderDirection === 'In'">
         <form class="example" action="javascript:void(0);">
             <input #scaninput [(ngModel)]="scannedSerialNo"  (keyup.enter)='scanMacAddress(scaninput.value)'
                 class="search" type="text" placeholder="MAC Address" name="mac" [class.disabled]="!dto.order.orderType.orderDirection">
             <button type="submit"><i class="material-icons small">search</i></button>
+        </form>
+    </div>
+    <div class="col-sm" *ngIf="dto.order.orderType.orderDirection === 'Out'">
+        <form class="example" action="javascript:void(0);">
+            <input #scaninput [(ngModel)]="searchSerialNo"  (keyup.enter)='searchByMacAddress(scaninput.value, false)'
+                class="search" type="text" placeholder="MAC Address" name="mac" [class.disabled]="!dto.order.orderType.orderDirection">
+            <button type="submit" (click)="searchByMacAddress(scaninput.value, true)"><i class="material-icons small">clear</i></button>
         </form>
     </div>
     <div class="col-sm">
@@ -92,6 +99,6 @@
         [(orderDetail)]="orderDetail" 
         [(saveSubject)]="onSaveSubject"
         [(scanPartNoSubject)]="scanPartNoSubject" 
-        [(scanMacAddressSubject)]="scanMacAddressSubject">
+        [(searchByMacAddressSubject)]="searchByMacAddressSubject">
     </app-order-out-list>
 </div>
