Making same flow for orders out as orders in due to business requirements.

--- a/src/components/orders/order-filters.template.html
+++ b/src/components/orders/order-filters.template.html
@@ -1,24 +1,17 @@
 <div class="flex-grid padded-aside filter-fixed" 
     *ngIf="dataSource.orderState === 'Draft'">
-    <div class="col-sm">
+    <div class="col-sm" *ngIf="dto.order.orderType.orderDirection === 'In'">
         <form class="example" action="javascript:void(0);">
             <input [(ngModel)]="selectedProductKey" (keyup.enter)='scanPartNo($event)' class="search" type="text"
                 placeholder="EAN or Part Number" name="Search" [class.disabled]="!dto.order.orderType.orderDirection" >
             <button type="submit"><i class="material-icons small">search</i></button>
         </form>
     </div>
-    <div class="col-sm" *ngIf="dto.order.orderType.orderDirection === 'In'">
+    <div class="col-sm">
         <form class="example" action="javascript:void(0);">
             <input #scaninput [(ngModel)]="scannedSerialNo"  (keyup.enter)='scanMacAddress(scaninput.value)'
                 class="search" type="text" placeholder="MAC Address" name="mac" [class.disabled]="!dto.order.orderType.orderDirection">
             <button type="submit"><i class="material-icons small">search</i></button>
-        </form>
-    </div>
-    <div class="col-sm" *ngIf="dto.order.orderType.orderDirection === 'Out'">
-        <form class="example" action="javascript:void(0);">
-            <input #scaninput [(ngModel)]="searchSerialNo"  (keyup.enter)='searchByMacAddress(scaninput.value, false)'
-                class="search" type="text" placeholder="MAC Address" name="mac" [class.disabled]="!dto.order.orderType.orderDirection">
-            <button type="submit" (click)="searchByMacAddress(scaninput.value, true)"><i class="material-icons small">clear</i></button>
         </form>
     </div>
     <div class="col-sm">
@@ -82,7 +75,7 @@
 
 <!--ORDERS ALL LIST -->
       
-<div *ngIf="dto.order.orderType.orderDirection === 'In'">
+<div>
     <app-order-in-list 
         [(dto)]="dto"
         [(orderDetail)]="orderDetail"
@@ -93,7 +86,7 @@
         [(saveSubject)]="onSaveSubject">
     </app-order-in-list>
 </div>
-<div *ngIf="dto.order.orderType.orderDirection === 'Out'" class="flex-grid padded-aside">
+<!-- <div *ngIf="dto.order.orderType.orderDirection === 'Out'" class="flex-grid padded-aside">
     <app-order-out-list 
         [(dto)]="dto" 
         [(orderDetail)]="orderDetail" 
@@ -101,4 +94,4 @@
         [(scanPartNoSubject)]="scanPartNoSubject" 
         [(searchByMacAddressSubject)]="searchByMacAddressSubject">
     </app-order-out-list>
-</div>
+</div> -->
